<resources>
    <string name="app_name" translatable="false">NetMan</string>
    <string name="wifi" translatable="false">WIFI</string>
    <string name="cellular">Cellular</string>
    <string name="vpn" translatable="false">VPN</string>
    <string name="package_name" translatable="false">moe.pinkd.netman</string>
    <string name="version_code" translatable="false">1.0.1</string>
    <string name="all">All</string>
    <string name="tip_1">This app is to prevent some app from connecting to network with `iptables`. So root permission is  needed to modify your `iptables`</string>
    <string name="tip_2">To manage your network with `iptables`, you must get root permission, so try it now</string>
    <string name="tip_3">Different devices have different cellular interface name(commonly `rmnet0`). Turn on your cellular and click `get cellular`</string>
    <string name="no_root">You haven\'t got root permission</string>
    <string name="get_it">Get it</string>
    <string name="test_root">Test root</string>
    <string name="get_cellular">Get cellular</string>
    <string name="exit">Exit</string>
    <string name="succeed">succeed</string>
    <string name="fail">fail</string>
    <string name="operation_done">done</string>
    <string name="restore_rules">Restore Rules</string>
    <string name="click_to_restore">Click to restore iptables rules</string>
    <string name="restore_process_title">Restoring Rules</string>
    <string name="app_not_found">app not found</string>
    <string name="show_system_apps">show system apps</string>
    <string name="about">about</string>
    <string name="donation">Donation</string>
    <string name="pay_pinkd_now">If you like this App, pay pinkd now\n(lol)</string>
    <string name="about_developer">About developer</string>
    <string name="about_this_app">About this app</string>
    <string name="about_license">License</string>
    <string name="version_code_text">Version Code</string>
    <string name="btc" translatable="false">btc</string>
    <string name="btc_address" translatable="false">37CxxRa1Ru3bssCXe7cB3kgcSfdd3gMEjt</string>
    <string name="ali_pay">Alipay</string>
    <string name="ali_pay_address" translatable="false">1724102580@qq.com</string>
    <string name="copied">copied</string>
    <string name="waiting">waiting</string>
</resources>
