<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:id="@+id/address_btc"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_default"
        android:weightSum="10"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/btc"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/btc_address"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/address_ali_pay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_default"
        android:weightSum="10"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/ali_pay"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/ali_pay_address"
            />

    </LinearLayout>
</LinearLayout>