<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="moe.pinkd.netman.ui.activity.AboutActivity">

    <LinearLayout
        android:id="@+id/about_version_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin_default"
            android:text="@string/version_code_text"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/item_margin_default"
            android:text="@string/version_code"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/about_version_code"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/pay_pinkd_now"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_default"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:padding="@dimen/item_margin_default"
            android:text="@string/donation"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divide"/>

        <TextView
            android:id="@+id/about_developer"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_default"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:padding="@dimen/item_margin_default"
            android:text="@string/about_developer"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divide"/>

        <TextView
            android:id="@+id/about_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_default"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:padding="@dimen/item_margin_default"
            android:text="@string/about_this_app"
            />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/divide"/>

        <TextView
            android:id="@+id/open_source_license"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_default"
            android:background="@drawable/text_selector"
            android:gravity="center_vertical"
            android:padding="@dimen/item_margin_default"
            android:text="@string/about_license"
            />

    </LinearLayout>

</RelativeLayout>
