<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="moe.pinkd.netman.ui.activity.MainActivity">
    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_height_default"
        android:background="@color/none"
        >

        <ImageView
            android:id="@+id/main_app_information_icon"
            android:layout_width="@dimen/item_height_default"
            android:layout_height="@dimen/item_height_default"
            android:layout_margin="@dimen/item_margin_default"
            android:src="@mipmap/ic_launcher"
            />

        <TextView
            android:id="@+id/main_app_information_switch_wifi"
            android:layout_width="@dimen/item_height_default"
            android:layout_height="@dimen/item_height_default"
            android:layout_alignParentEnd="true"
            android:layout_margin="@dimen/item_margin_default"
            android:gravity="center"
            android:text="@string/wifi"
            />

        <TextView
            android:id="@+id/main_app_information_switch_cellular"
            android:layout_width="@dimen/item_height_default"
            android:layout_height="@dimen/item_height_default"
            android:layout_margin="@dimen/item_margin_default"
            android:layout_toStartOf="@id/main_app_information_switch_wifi"
            android:gravity="center"
            android:text="@string/cellular"
            />

        <TextView
            android:id="@+id/main_app_information_package_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/item_height_default"
            android:layout_marginStart="@dimen/item_margin_default"
            android:layout_toEndOf="@id/main_app_information_icon"
            android:layout_toStartOf="@id/main_app_information_switch_cellular"
            android:gravity="start|center_vertical"
            android:text="@string/app_name"
            />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</LinearLayout>
